# lg

./: README.md  app.py  package-lock.json  package.json  pyproject.toml
examples/: communities.txt  config.yml.example  env.example  lg.service  nginx-subpath.conf  nginx.conf
js/: close_delete.js  menu.js
lg/: __init__.py  commands.py  errors.py  forms.py  home.py  maps.py  ping_multi.py  routes.py  runcmd.py  settings.py  templates.py  ttp.py  workers.py
lg/templates/: base.html  home.html  navmenu.html  ping_multi.html
lg/templates/errors/: base.html  generic.html
lg/templates/results/: bgp.html  index.html  ping.html  ping_multi.html  traceroute.html
lg/ttp_templates/: cisco_iosxr_bgp.ttp  cisco_iosxr_ping.ttp  cisco_iosxr_traceroute.ttp  juniper_junos_bgp.ttp  juniper_junos_ping.ttp
tests/: __init__.py  ios_xr_bgp_8888.txt  ios_xr_bgp_aspath.txt  ios_xr_bgp_local.txt  ios_xr_ping.txt  ios_xr_traceroute.txt  juniper_junos_bgp.txt  juniper_junos_bgp_morepath.txt  juniper_junos_traceroute.txt  junos_ping.txt
